Expose Processes as part of the Index
